--- a/template/product/sub_category.html
+++ b/template/product/sub_category.html
@@ -32,19 +32,19 @@
                             </form>
                         </div>
                         <div class="filter-sidebar-left">
-                            <div class="title-left">
-                                <h3>Categories</h3>
+                            <div class="title-left text-right">
+                                <h3>دسته بندی ها</h3>
                             </div>
                             <div class="list-group list-group-collapse list-group-sm list-group-tree" id="list-group-men" data-children=".sub-men">
                                     {% for category in categories %}
                                         {% if category.children.count %}
                                                 <div class="list-group-collapse sub-men">
-                                                    <a class="list-group-item list-group-item-action collapsed" href="#sub-men{{ category.id }}" data-toggle="collapse" aria-expanded="true" aria-controls="sub-men{{ category.id }}">{{ category.name }} <small class="text-muted">(100)</small>
+                                                    <a class="list-group-item list-group-item-action collapsed" href="#sub-men{{ category.id }}" data-toggle="collapse" aria-expanded="true" aria-controls="sub-men{{ category.id }}">{{ category.name }} <small class="text-muted">({{ category.children.all.count }})</small>
                                                 </a>
                                                     <div class="collapse" id="sub-men{{ category.id }}" data-parent="#list-group-men">
                                                         <div class="list-group">
                                                             {% for child in category.children.all %}
-                                                            <a href="{% url 'category' child.slug %}" id="child{{ child.id }}" style="cursor: pointer" class="list-group-item list-group-item-action active">{{ child.name }}<small class="text-muted">(50)</small></a>
+                                                            <a href="{% url 'category' child.slug %}" id="child{{ child.id }}" style="cursor: pointer" class="list-group-item list-group-item-action active">{{ child.name }}<small class="text-muted">({{ child.products.all.count }})</small></a>
                                                             {% endfor %}
                                                         </div>
                                                     </div>
@@ -133,18 +133,8 @@
                 <div class="col-xl-9 col-lg-9 col-sm-12 col-xs-12 shop-content-right">
                     <div class="right-product-box">
                         <div class="product-item-filter row">
-                            <div class="col-12 col-sm-8 text-center text-sm-left">
-                                <div class="toolbar-sorter-right">
-                                    <span>Sort by </span>
-                                    <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-									<option data-display="Select">Nothing</option>
-									<option value="1">Popularity</option>
-									<option value="2">High Price → High Price</option>
-									<option value="3">Low Price → High Price</option>
-									<option value="4">Best Selling</option>
-								</select>
-                                </div>
-                                <p>Showing all 4 results</p>
+                            <div class="col-12 col-sm-8 text-left text-sm-left">
+                                <p> نمایش همه ی {{ products.count }} نتیجه </p>
                             </div>
                             <div class="col-12 col-sm-4 text-center text-sm-right">
                                 <ul class="nav nav-tabs ml-auto">
@@ -168,7 +158,7 @@
                                                     <div class="products-single fix">
                                                         <div class="box-img-hover">
                                                             <div class="type-lb">
-                                                                <p class="sale">Sale</p>
+                                                                <p class="sale">جدید</p>
                                                             </div>
                                                             <img src="{{ product.image.url }}" class="img-fluid" alt="Image">
                                                             <div class="mask-icon">
@@ -177,7 +167,7 @@
                                                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
                                                                 </ul>
-                                                                <a class="cart" href="#">Add to Cart</a>
+                                                                <a class="cart" href="#">اضافه کردن به سبد خرید</a>
                                                             </div>
                                                         </div>
                                                         <div class="why-text">
@@ -198,7 +188,7 @@
                                                     <div class="products-single fix">
                                                         <div class="box-img-hover">
                                                             <div class="type-lb">
-                                                                <p class="new">New</p>
+                                                                <p class="new">جدید</p>
                                                             </div>
                                                             <img src="{{ product.image.url }}" class="img-fluid" alt="Image">
                                                             <div class="mask-icon">
@@ -215,9 +205,17 @@
                                                 <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
                                                     <div class="why-text full-width">
                                                         <h4>{{ product.name }}</h4>
-                                                        <h5>$40.79</h5>
+{#                                                        {% if product.shop_product.all.price.min ==  product.shop_product.all.price.max %}#}
+                                                            <h5>
+                                                                {% for shopproduct in product.shop_product.all %}
+                                                                    <span> {{ shopproduct.price }}$, </span>
+                                                                {% endfor %}
+                                                            </h5>
+{#                                                        {% else %}#}
+{#                                                            <h5>from {{ product.shop_product.all.price.min }}$ to {{ product.shop_product.all.price.max }}$</h5>#}
+{#                                                        {% endif %}#}
                                                         <p>{{ product.detail }}</p>
-                                                        <a class="btn hvr-hover" href="#">Add to Cart</a>
+                                                        <a class="btn hvr-hover" href="#">اضافه کردن به سبد خرید</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -281,4 +279,21 @@
 {#            });#}
 {#        }#}
 {#    </script>#}
+    <script>
+        function clear_basket_item(basket_item_id) {
+            const data = JSON.stringify({basket_item_id})
+            $.ajax({
+                type: "post",
+                url: '{% url 'remove_basket_item' %}',
+                data: data,
+                success: function (response) {
+                    console.log(response)
+                    const data = JSON.parse(response)
+                    $(`#basket_item${data.basket_item_id}`).remove()
+                    $('#basket_item_count').text(`${data.basket_item_count}`)
+                    $('#basket_total_price').text(`${data.basket_total_price}`)
+                },
+            });
+        }
+    </script>
 {% endblock %}
