--- a/template/base/header.html
+++ b/template/base/header.html
@@ -42,14 +42,9 @@
 						<option>€ EUR</option>
 					</select>
                     </div>
-                    <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +11 900 800 100</a></p>
-                    </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Our location</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">پروفایل</a></li>
                         </ul>
                     </div>
                 </div>
@@ -76,63 +71,34 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
                         {% if user.is_authenticated %}
-                            <li class="nav-item active"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                            <li class="nav-item active d-flex align-items-center"><a class="nav-link border-secondary bg-info rounded h-25" href="#"><p>{{ user.first_name }}  {{ user.last_name }}</p></a></li>
+                            <li class="nav-item active"><a class="nav-link" href="{% url 'logout' %}">خروج</a></li>
                         {% else %}
-                             <li class="nav-item active"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                             <li class="nav-item active"><a class="nav-link" href="{% url 'login' %}">ورود</a></li>
                         {% endif %}
-                        <li class="nav-item active"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="{% url 'home' %}">خانه</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">درباره ما</a></li>
                         <li class="dropdown megamenu-fw">
-                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Product</a>
+                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">محصولات</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
                                 <li>
                                     <div class="row">
-                                        <div class="col-menu col-md-3">
-                                            <h6 class="title">Top</h6>
-                                            <div class="content">
-                                                <ul class="menu-col">
-                                                    <li><a href="shop.html">Jackets</a></li>
-                                                    <li><a href="shop.html">Shirts</a></li>
-                                                    <li><a href="shop.html">Sweaters & Cardigans</a></li>
-                                                    <li><a href="shop.html">T-shirts</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <!-- end col-3 -->
-                                        <div class="col-menu col-md-3">
-                                            <h6 class="title">Bottom</h6>
-                                            <div class="content">
-                                                <ul class="menu-col">
-                                                    <li><a href="shop.html">Swimwear</a></li>
-                                                    <li><a href="shop.html">Skirts</a></li>
-                                                    <li><a href="shop.html">Jeans</a></li>
-                                                    <li><a href="shop.html">Trousers</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <!-- end col-3 -->
-                                        <div class="col-menu col-md-3">
-                                            <h6 class="title">Clothing</h6>
-                                            <div class="content">
-                                                <ul class="menu-col">
-                                                    <li><a href="shop.html">Top Wear</a></li>
-                                                    <li><a href="shop.html">Party wear</a></li>
-                                                    <li><a href="shop.html">Bottom Wear</a></li>
-                                                    <li><a href="shop.html">Indian Wear</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <div class="col-menu col-md-3">
-                                            <h6 class="title">Accessories</h6>
-                                            <div class="content">
-                                                <ul class="menu-col">
-                                                    <li><a href="shop.html">Bags</a></li>
-                                                    <li><a href="shop.html">Sunglasses</a></li>
-                                                    <li><a href="shop.html">Fragrances</a></li>
-                                                    <li><a href="shop.html">Wallets</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
+                                        {% for category in categories %}
+                                            {% if category.children.count %}
+                                                <div class="col-menu col-md-4">
+                                                    <h6 class="title">{{ category.name }}</h6>
+                                                    <div class="content">
+                                                        <ul class="menu-col">
+                                                        {% for child in category.children.all %}
+                                                            <li><a href="{% url 'sub_category' child.slug %}">{{ child.name }}</a></li>
+                                                        {% endfor %}
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+                                        {% endfor %}
+
+
                                         <!-- end col-3 -->
                                     </div>
                                     <!-- end row -->
@@ -140,61 +106,49 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
+                            <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">حساب</a>
                             <ul class="dropdown-menu">
-                                <li><a href="cart.html">Cart</a></li>
-                                <li><a href="checkout.html">Checkout</a></li>
-                                <li><a href="my-account.html">My Account</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
-                                <li><a href="shop-detail.html">Shop Detail</a></li>
+                                <li><a href="{% url "cart" %}">سبد خرید</a></li>
+                                <li><a href="my-account.html">پروفایل</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">Our Service</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
 
-                <!-- Start Atribute Navigation -->
+                <!-- Start Attribute Navigation -->
                 <div class="attr-nav">
                     <ul>
                         <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
                         <li class="side-menu"><a href="#">
 						<i class="fa fa-shopping-bag"></i>
-                            <span class="badge">3</span>
+                            <span class="badge text-danger" id="basket_item_count">{{ basket_items.count }}</span>
 					</a></li>
                     </ul>
                 </div>
-                <!-- End Atribute Navigation -->
+                <!-- End Attribute Navigation -->
             </div>
+        {% if user.is_authenticated %}
             <!-- Start Side Menu -->
-            <div class="side">
-                <a href="#" class="close-side"><i class="fa fa-times"></i></a>
-                <li class="cart-box">
-                    <ul class="cart-list">
-                        <li>
-                            <a href="#" class="photo"><img src="images/img-pro-01.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Delica omtantur </a></h6>
-                            <p>1x - <span class="price">$80.00</span></p>
+                <div class="side">
+                    <a href="#" class="close-side"><i class="fa fa-times"></i></a>
+                    <li class="cart-box">
+                        <ul class="cart-list" id="side_basket">
+                            {% for basket_item in basket_items %}
+                                <li id="basket_item{{ basket_item.id }}">
+                                    <h6 class="row justify-content-between"><a href="{% url 'product_detail' basket_item.shop_product.product.slug %}">{{ basket_item.shop_product.product.name }}</a> <span style="cursor: pointer" onclick="clear_basket_item({{ basket_item.id }})"><i class="fa fa-trash" aria-hidden="true"></i></span></h6>
+                                    <p><span id="basket_item_quantity{{ basket_item.id }}">{{ basket_item.quantity }}</span>x - <span class="price">${{ basket_item.price }} </span> <span></span></p>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <li class="total bg-white">
+                            <a href="{% url 'cart' %}" class="btn btn-default hvr-hover btn-cart">سبد خرید</a>
+                            <span class="float-right"><strong>Total</strong> :تومان<span id="basket_total_price">{{ basket.total_price }}</span></span>
                         </li>
-                        <li>
-                            <a href="#" class="photo"><img src="images/img-pro-02.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Omnes ocurreret</a></h6>
-                            <p>1x - <span class="price">$60.00</span></p>
-                        </li>
-                        <li>
-                            <a href="#" class="photo"><img src="images/img-pro-03.jpg" class="cart-thumb" alt="" /></a>
-                            <h6><a href="#">Agam facilisis</a></h6>
-                            <p>1x - <span class="price">$40.00</span></p>
-                        </li>
-                        <li class="total">
-                            <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
-                            <span class="float-right"><strong>Total</strong>: $180.00</span>
-                        </li>
-                    </ul>
-                </li>
-            </div>
+                    </li>
+                </div>
             <!-- End Side Menu -->
+        {% endif %}
         </nav>
         <!-- End Navigation -->
     </header>
