final commit for present

--- a/template/base/header.html
+++ b/template/base/header.html
@@ -109,7 +109,7 @@
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">حساب</a>
                             <ul class="dropdown-menu">
                                 <li><a href="{% url "cart" %}">سبد خرید</a></li>
-                                <li><a href="my-account.html">پروفایل</a></li>
+                                <li><a href="{% url 'profile' %}">پروفایل</a></li>
                             </ul>
                         </li>
                     </ul>
