--- a/template/order/cart.html
+++ b/template/order/cart.html
@@ -48,8 +48,6 @@
                                     </td>
                                 </tr>
                             {% endfor %}
-
-
                             </tbody>
                         </table>
                     </div>
@@ -67,8 +65,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-2 d-flex shopping-box"><a href="#" class="ml-auto btn hvr-hover">پرداخت در محل</a> </div>
-                <div class="col-2 d-flex shopping-box"><a href="#" class="ml-auto btn hvr-hover">درگاه بانک</a> </div>
+                <div class="col-2 d-flex shopping-box"><a href="{% url 'zarrin_pall' %}" class="ml-auto btn hvr-hover">صفحه پرداخت</a> </div>
             </div>
 
 
