--- a/template/base/base.html
+++ b/template/base/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="application/octet-stream" href="{% static 'css/bootstrap.min.css.map' %}">
     <!-- Site CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Responsive CSS -->
@@ -33,7 +34,9 @@
      <script src="{%  static 'js/html5shiv.js' %}"></script>
      <script src="{%  static 'js/respond.min.js' %}"></script>
     <![endif]-->
-
+    {% block header %}
+    
+    {% endblock %}
 </head>
 <body>
     {% include 'base/header.html' %}
@@ -45,6 +48,7 @@
     <script src="{% static 'js/jquery-3.2.1.min.js'%}"></script>
     <script src="{% static 'js/popper.min.js'%}"></script>
     <script src="{% static 'js/bootstrap.min.js'%}"></script>
+{#    <script src="{% static 'js/bootstrap.min.js.map'%}"></script>#}
     <!-- ALL PLUGINS -->
     <script src="{% static 'js/jquery.superslides.min.js'%}"></script>
     <script src="{% static 'js/bootstrap-select.js'%}"></script>
