--- a/template/base/header.html
+++ b/template/base/header.html
@@ -85,8 +85,6 @@
                                                 </div>
                                             {% endif %}
                                         {% endfor %}
-
-
                                         <!-- end col-3 -->
                                     </div>
                                     <!-- end row -->
@@ -117,6 +115,7 @@
                 <!-- End Attribute Navigation -->
             </div>
             <!-- Start Side Menu -->
+        {% if user.is_authenticated %}
                 <div class="side">
                     <a href="#" class="close-side"><i class="fa fa-times"></i></a>
                     <li class="cart-box">
@@ -138,6 +137,7 @@
                         </li>
                     </li>
                 </div>
+        {% endif %}
             <!-- End Side Menu -->
         </nav>
         <!-- End Navigation -->
